# GlassPatentExtractor

./: Dockerfile  Dockerfile.cuda  README.md  requirements.txt
kieta-data-objs/: .gitignore  README.md  pyproject.toml
kieta-data-objs/kieta_data_objs/: __init__.py  area.py  base.py  document.py  font.py  geometry.py  link.py  normalizedObject.py  ontologicalEntity.py  page.py  pageLayout.py  revision.py  util.py
kieta-modules/: .gitignore  README.md  pyproject.toml
kieta-modules/kieta_modules/: __init__.py  base.py  captionDetector.py  captionTableLocalizer.py  cellDetector.py  functionalRecognition.py  heuristicDetection.py  heuristicRecognition.py  pipeline.py  tatr.py  util.py  utilityModules.py
kieta-modules/kieta_modules/io/: exprt.py  imprt.py  pdfConvert.py
kieta-modules/kieta_modules/layout/: lineDetection.py  paragraphDetection.py
kieta-modules/kieta_modules/ocr/: merge.py  ocr.py  post_correction.py  text_detection.py
kieta-modules/kieta_modules/specific_modules/: __init__.py
kieta-modules/kieta_modules/specific_modules/glass/: glassExtraction.py  glassExtraction_isc.py  meta_data.py
kieta-modules/kieta_modules/utility_stuff/layoutlm/: layoutlm.py  pdf_process.py
kieta-modules/kieta_modules/utility_stuff/tatr/: functions.py
kieta-modules/kieta_modules/utility_stuff/tatr/detr/models/: backbone.py  detr.py  detr_multi.py  matcher.py  segmentation.py
server-glass/: app.py  default_mapping.json  mapping.json  pipeline.json
server-glass/templates/: index.html
